# CaveX2023

./: .gitignore  README.md
.ccls-cache/@home@succinyl@cavex-2023@CaveX2023/: catkin_ws@src@cavex@include@cavex@nodelets@cavexNodelet.h  catkin_ws@src@cavex@include@cavex@nodelets@cavexNodelet.h.blob  catkin_ws@src@cavex@include@cavex@nodelets@floamNodelet.h  catkin_ws@src@cavex@include@cavex@nodelets@floamNodelet.h.blob  catkin_ws@src@cavex@src@nodelets@floamNodelet.cpp.blob
Miscellaneous/: README.md
Miscellaneous/nvim/: init.vim
arachnida_web/arachnida-backend/: .gitignore  app.ts  package.json  tsconfig.json
arachnida_web/arachnida-frontend/: package-lock.json  package.json
arachnida_ws/: .clangd  README.md  floamRotation_RoboticsLab.csv  floamTranslation_RoboticsLab.csv  movementData_RoboticsLab.txt  velodyneSocketReader_LiDAR_Recording 1.pcap  velodyneSocketReader_LiDAR_Recording 2.pcap  velodyneSocketReader_LiDAR_Recording 3.pcap
arachnida_ws/src/arachnida/: CMakeLists.txt  nodelets_plugins.xml  package.xml
arachnida_ws/src/arachnida/include/: utils.h  velodynePCAPReader.h  velodyneSocketReader.h  velodyneUtils.h
arachnida_ws/src/arachnida/include/arachnida/lidar/: velodynePCAPReader.h  velodyneSocketReader.h  velodyneUtils.h
arachnida_ws/src/arachnida/include/arachnida/path_planning/: artificialPotentialField.h  pathPlanningNode.h  ppArtificialPotentialField.h  tylerArtificialPotentialField.h  tylerPathPlanningNode.h
arachnida_ws/src/arachnida/include/arachnida/robot/: robotState.h
arachnida_ws/src/arachnida/include/arachnida/robot_state/: extendedKalmanFilter.h
arachnida_ws/src/arachnida/include/floam_cpu/: laserMappingClass.h  laserProcessingClass.h  lidarOptimisation.h  odomEstimationClass.h
arachnida_ws/src/arachnida/include/object_detection_cpu/: objBox.h  objCluster.h  objKdtree.h  objPointCloudProcessor.h  objRansac.h  objRender.h
arachnida_ws/src/arachnida/launch/: arachnida_main.launch  arachnida_test.launch  hello_world_launch.launch
arachnida_ws/src/arachnida/msg/: Obstacle.msg  ObstacleList.msg
arachnida_ws/src/arachnida/src/: README.md  hello_world.cpp  publisher_sample_node.cpp  subscriber_sample_node.cpp
arachnida_ws/src/arachnida/src/floam_cpu/: laserMappingClass.cpp  laserProcessingClass.cpp  laserProcessingNode.cpp  lidarOptimisation.cpp  odomEstimationClass.cpp  odomEstimationNode.cpp
arachnida_ws/src/arachnida/src/gait_energetics/: gait_energetics.cpp  gait_energetics.h  main.cpp
arachnida_ws/src/arachnida/src/lidar/: velodynePCAPReader.cpp  velodyneReaderNode.cpp  velodyneSocketReader.cpp  velodyneUtils.cpp
arachnida_ws/src/arachnida/src/nodelets/: floamNodelet.cpp  objectDetectionNodelet.cpp  pathPlanningNodelet.cpp  robotStateNodelet.cpp  visualisationNodelet.cpp
arachnida_ws/src/arachnida/src/object_detection/: objCluster.cpp  objPointCloudProcessor.cpp  objRansac.cpp  objRender.cpp
arachnida_ws/src/arachnida/src/path_planning/: artificialPotentialField.cpp  pathPlanningNode.cpp  tylerArtificialPotentialField.cpp
arachnida_ws/src/arachnida/src/robot_state/: extendedKalmanFilter.cpp  robotStateNode.cpp
catkin_ws/src/cavex/: CMakeLists.txt  floam_nodelet.xml  nodelets.xml  object_detection_nodelet.xml  package.xml
catkin_ws/src/cavex/include/: velodynePCAPReader.h  velodyneSocketReader.h  velodyneUtils.h
catkin_ws/src/cavex/include/cavex/: utils.h
catkin_ws/src/cavex/include/cavex/nodelets/: cavexNodelet.h  floamNodelet.h  objectDetectionNodelet.h
catkin_ws/src/cavex/include/cavex/path_planning/: ppArtificialPotentialField.h
catkin_ws/src/cavex/include/cavex/robot/: robotState.h
catkin_ws/src/cavex/include/cavex/robot_state/: extendedKalmanFilter.h
catkin_ws/src/cavex/include/object_detection/: objKdtree.h  objRender.h
catkin_ws/src/cavex/include/object_detection_cpu/: objCluster.h  objKdtree.h  objPointCloudProcessor.h  objRansac.h  objRender.h
catkin_ws/src/cavex/launch/: cavex_debug_launch.launch  cavex_launch.launch
catkin_ws/src/cavex/src/: nodeletManagerNode.cpp  nodelets.xml  publisher_sample.cpp  publisher_sample_node.cpp  subset.bag
catkin_ws/src/cavex/src/floam_cpu/: laserMappingClass.cpp  laserProcessingClass.cpp  lidarOptimisation.cpp  odomEstimationClass.cpp  odomEstimationNode.cpp
catkin_ws/src/cavex/src/gait_energetics/: gait_energetics.cpp  gait_energetics.h  main.cpp
catkin_ws/src/cavex/src/lidar/: .velodyneSocketReader.cpp.swn  .velodyneSocketReader.cpp.swo  velodynePCAPReader.cpp  velodyneReaderNode.cpp  velodyneSocketReader.cpp  velodyneUtils.cpp
catkin_ws/src/cavex/src/nodelets/: floamNodelet.cpp  objectDetectionNodelet.cpp
catkin_ws/src/cavex/src/object_detection/: objCluster.cpp  objPointCloudProcessor.cpp  objRansac.cpp  objRender.cpp
catkin_ws/src/cavex/src/object_detection_gpu/clustering/DBSCAN/: dbscan.cu
catkin_ws/src/cavex/src/robot_state/: extendedKalmanFilter.cpp  robotStateNode.cpp
imu_ws/: README.md
launch_app/: README.md
launch_app/launch_scripts/: cavex_arduino.sh  cavex_dronedeploy.sh  cavex_gait.sh  cavex_imu.sh  (+4 more)
openshc_ws/src/bullet_syropod/: package.xml
openshc_ws/src/bullet_syropod/launch/: bullet_gazebo.launch
openshc_ws/src/bullet_syropod/models/cave/: model.config  model.sdf
openshc_ws/src/bullet_syropod/models/cave/media/: cave.dae
openshc_ws/src/bullet_syropod/models/incline/: model.config  model.sdf
openshc_ws/src/bullet_syropod/models/incline/media/: incline.dae
openshc_ws/src/bullet_syropod/models/sandbed/: model.config  model.sdf
openshc_ws/src/bullet_syropod/models/sandbed/media/: sandbed.dae
openshc_ws/src/bullet_syropod/models/terrain1/: model.config  model.sdf
openshc_ws/src/bullet_syropod/models/terrain1/media/: terrain1.dae
openshc_ws/src/bullet_syropod/worlds/: cave.world  incline.world  sandbed.world
openshc_ws/src/cavex_hexapod/: package.xml
openshc_ws/src/cavex_hexapod/config/: controller_config.yaml
openshc_ws/src/cavex_hexapod/launch/: dynamixel_interface_controller.launch  hexapod_highlevel.launch
websocket_interface/: app.ts  package.json  tsconfig.json
websocket_ws/: README.md
(+454 files in other folders)
