<?xml version="1.0"?>
<package format="2">
  <name>cavex</name>
  <version>0.0.1</version>
  <description>The cavex package</description>

  <maintainer email="lukapmoran@gmail.com">Luka Moran (succinyl)</maintainer>
  <maintainer email="EMAIL_HERE@gmail.com">Riley Groome</maintainer>
  <maintainer email="EMAIL_HERE@gmail.com">Tyler Groome</maintainer>


  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <!-- Would need to speak to Assoc. Prof. David Harvey about licensing -->
  <license>TODO</license>


  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <maintainer email="lukapmoran@gmail.com">Luka Moran (succinyl)</maintainer>
  <maintainer email="EMAIL_HERE@gmail.com">Riley Groome</maintainer>
  <maintainer email="EMAIL_HERE@gmail.com">Tyler Groome</maintainer>


  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>nodelet</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nodelet</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <!-- <nodelet plugin="${prefix}/object_detection_nodelet.xml" />
    <nodelet plugin="${prefix}/floam_nodelet.xml" /> -->
    <!-- <nodelet plugin="${prefix}/object_detection_nodelet.xml" /> -->
    <nodelet plugin="${prefix}/floam_nodelet.xml" />
    <!-- <cavex plugin="${prefix}/floam_nodelet.xml" /> -->
  </export>
</package>
