<?xml version="1.0"?>
<package format="2">

  <name>cavex_hexapod</name>
  <version>0.1.0</version>
  <description>The cavex_hexapod package</description>

  <maintainer email="shc-support@csiro.au"></maintainer>

  <license>CSIRO Open Source Software Licence Agreement (Ref: LICENSE file)</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>dynamixel_interface</buildtool_depend>
  <buildtool_depend>roscpp</buildtool_depend>
  <buildtool_depend>sensor_msgs</buildtool_depend>
  <buildtool_depend>std_msgs</buildtool_depend>
  <buildtool_export_depend>dynamixel_interface</buildtool_export_depend>
  <buildtool_export_depend>roscpp</buildtool_export_depend>
  <buildtool_export_depend>sensor_msgs</buildtool_export_depend>
  <buildtool_export_depend>std_msgs</buildtool_export_depend>
  <exec_depend>dynamixel_interface</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
